--- a/drivers/misc/mediatek/Kconfig
+++ b/drivers/misc/mediatek/Kconfig
@@ -87,9 +87,9 @@ config MTK_GPT_SCHEME_SUPPORT
 	  GPT is a better partition layout scheme
 	  GPT is instead of PMT
 
-source "drivers/misc/mediatek/dum-char/Kconfig"
-source "drivers/misc/mediatek/nand/Kconfig"
-source "drivers/misc/mediatek/partition/Kconfig"
+#source "drivers/misc/mediatek/dum-char/Kconfig"
+#source "drivers/misc/mediatek/nand/Kconfig"
+#source "drivers/misc/mediatek/partition/Kconfig"
 
 endmenu  # Storage
 
@@ -140,12 +140,12 @@ config MTK_PERIODIC_DATA_COLLECTION
 	  to create a unused contiguous memory. The
 	  DRAM can enter low power state if it is idle.
 
-source "drivers/misc/mediatek/base/power/Kconfig"
-source "drivers/misc/mediatek/freqhopping/Kconfig"
-source "drivers/misc/mediatek/pmic/Kconfig"
-source "drivers/misc/mediatek/pmic_wrap/Kconfig"
-source "drivers/misc/mediatek/power/Kconfig"
-source "drivers/misc/mediatek/thermal/Kconfig"
+#source "drivers/misc/mediatek/base/power/Kconfig"
+#source "drivers/misc/mediatek/freqhopping/Kconfig"
+#source "drivers/misc/mediatek/pmic/Kconfig"
+#source "drivers/misc/mediatek/pmic_wrap/Kconfig"
+#source "drivers/misc/mediatek/power/Kconfig"
+#source "drivers/misc/mediatek/thermal/Kconfig"
 
 endmenu  # Power
 
@@ -188,28 +188,28 @@ config MTK_LCM_PHYSICAL_ROTATION_HW
 	  Enable it when LCM hardware is intalled upside down,
 	  and you need to rotate the display content to adapting.
 
-source "drivers/misc/mediatek/cameraisp/Kconfig"
-source "drivers/misc/mediatek/cam_cal/Kconfig"
-source "drivers/misc/mediatek/cmdq/Kconfig"
-source "drivers/misc/mediatek/cqdma/Kconfig"
-source "drivers/misc/mediatek/ext_disp/Kconfig"
-source "drivers/misc/mediatek/flashlight/Kconfig"
-source "drivers/misc/mediatek/flashlight/richtek/Kconfig"
-source "drivers/misc/mediatek/gpu/Kconfig"
-source "drivers/misc/mediatek/hdmi/Kconfig"
-source "drivers/misc/mediatek/imgsensor/Kconfig"
-source "drivers/misc/mediatek/jpeg/Kconfig"
-source "drivers/misc/mediatek/lcm/Kconfig"
-source "drivers/misc/mediatek/lens/Kconfig"
-source "drivers/misc/mediatek/fde_aes/Kconfig"
-source "drivers/misc/mediatek/mjc/Kconfig"
-source "drivers/misc/mediatek/mmp/Kconfig"
+#source "drivers/misc/mediatek/cameraisp/Kconfig"
+#source "drivers/misc/mediatek/cam_cal/Kconfig"
+#source "drivers/misc/mediatek/cmdq/Kconfig"
+#source "drivers/misc/mediatek/cqdma/Kconfig"
+#source "drivers/misc/mediatek/ext_disp/Kconfig"
+#source "drivers/misc/mediatek/flashlight/Kconfig"
+#source "drivers/misc/mediatek/flashlight/richtek/Kconfig"
+#source "drivers/misc/mediatek/gpu/Kconfig"
+#source "drivers/misc/mediatek/hdmi/Kconfig"
+#source "drivers/misc/mediatek/imgsensor/Kconfig"
+#source "drivers/misc/mediatek/jpeg/Kconfig"
+#source "drivers/misc/mediatek/lcm/Kconfig"
+#source "drivers/misc/mediatek/lens/Kconfig"
+#source "drivers/misc/mediatek/fde_aes/Kconfig"
+#source "drivers/misc/mediatek/mjc/Kconfig"
+#source "drivers/misc/mediatek/mmp/Kconfig"
 #source "drivers/misc/mediatek/multibridge/Kconfig"
 #source "drivers/misc/mediatek/rrc/Kconfig"
-source "drivers/misc/mediatek/sync/Kconfig"
-source "drivers/misc/mediatek/videocodec/Kconfig"
-source "drivers/misc/mediatek/video/Kconfig"
-source "drivers/misc/mediatek/vpu/Kconfig"
+#source "drivers/misc/mediatek/sync/Kconfig"
+#source "drivers/misc/mediatek/videocodec/Kconfig"
+#source "drivers/misc/mediatek/video/Kconfig"
+#source "drivers/misc/mediatek/vpu/Kconfig"
 
 endmenu  # MM
 
@@ -229,12 +229,12 @@ config MTK_SENSOR_BIO
 	  between kernel space and user space.
 
 if !MTK_SENSOR_BIO
-source "drivers/misc/mediatek/accelerometer/Kconfig"
+#source "drivers/misc/mediatek/accelerometer/Kconfig"
 #source "drivers/misc/mediatek/activity_sensor/Kconfig"
-source "drivers/misc/mediatek/alsps/Kconfig"
-source "drivers/misc/mediatek/rgbw/Kconfig"
+#source "drivers/misc/mediatek/alsps/Kconfig"
+#source "drivers/misc/mediatek/rgbw/Kconfig"
 #source "drivers/misc/mediatek/answer_call_sensor/Kconfig"
-source "drivers/misc/mediatek/barometer/Kconfig"
+#source "drivers/misc/mediatek/barometer/Kconfig"
 #source "drivers/misc/mediatek/face_down_sensor/Kconfig"
 #source "drivers/misc/mediatek/freefall_sensor/Kconfig"
 #source "drivers/misc/mediatek/gamerotationvector/Kconfig"
@@ -242,12 +242,12 @@ source "drivers/misc/mediatek/barometer/Kconfig"
 #source "drivers/misc/mediatek/gesture/Kconfig"
 #source "drivers/misc/mediatek/glance_gesture_sensor/Kconfig"
 #source "drivers/misc/mediatek/gravity/Kconfig"
-source "drivers/misc/mediatek/gyroscope/Kconfig"
+#source "drivers/misc/mediatek/gyroscope/Kconfig"
 #source "drivers/misc/mediatek/heart_rate_sensor/Kconfig"
 #source "drivers/misc/mediatek/humidity/Kconfig"
-source "drivers/misc/mediatek/hwmon/Kconfig"
+#source "drivers/misc/mediatek/hwmon/Kconfig"
 #source "drivers/misc/mediatek/linearacceleration/Kconfig"
-source "drivers/misc/mediatek/magnetometer/Kconfig"
+#source "drivers/misc/mediatek/magnetometer/Kconfig"
 #source "drivers/misc/mediatek/pdr_sensor/Kconfig"
 #source "drivers/misc/mediatek/pedometer/Kconfig"
 #source "drivers/misc/mediatek/pick_up_sensor/Kconfig"
@@ -261,7 +261,7 @@ source "drivers/misc/mediatek/magnetometer/Kconfig"
 #source "drivers/misc/mediatek/wake_gesture_sensor/Kconfig"
 endif
 if MTK_SENSOR_BIO
-source "drivers/misc/mediatek/sensor_bio/Kconfig"
+#source "drivers/misc/mediatek/sensor_bio/Kconfig"
 endif
 endmenu  # Sensors
 
@@ -270,13 +270,13 @@ menu "Modem & Connectivity related configs"
 
 #source "drivers/misc/mediatek/btcvsd/Kconfig"
 source "drivers/misc/mediatek/btif/Kconfig"
-source "drivers/misc/mediatek/ccci_util/Kconfig"
-source "drivers/misc/mediatek/ccmni/Kconfig"
+#source "drivers/misc/mediatek/ccci_util/Kconfig"
+#source "drivers/misc/mediatek/ccmni/Kconfig"
 source "drivers/misc/mediatek/connectivity/Kconfig"
-source "drivers/misc/mediatek/conn_md/Kconfig"
+#source "drivers/misc/mediatek/conn_md/Kconfig"
 #source "drivers/misc/mediatek/dual_ccci/Kconfig"
-source "drivers/misc/mediatek/eccci/Kconfig"
-source "drivers/misc/mediatek/nfc/Kconfig"
+#source "drivers/misc/mediatek/eccci/Kconfig"
+#source "drivers/misc/mediatek/nfc/Kconfig"
 #source "drivers/misc/mediatek/ssw/Kconfig"
 
 config MTK_VOLTE_SUPPORT
@@ -305,47 +305,47 @@ endmenu  # CONN
 
 menu "Other Peripherals"
 
-source "drivers/misc/mediatek/accdet/Kconfig"
-source "drivers/misc/mediatek/auxadc/Kconfig"
-source "drivers/misc/mediatek/cirq/Kconfig"
-source "drivers/misc/mediatek/debug_latch/Kconfig"
-source "drivers/misc/mediatek/debug_tracer/Kconfig"
-source "drivers/misc/mediatek/devapc/Kconfig"
-source "drivers/misc/mediatek/dfd/Kconfig"
-source "drivers/misc/mediatek/dramc/Kconfig"
-source "drivers/misc/mediatek/dxcc/Kconfig"
-source "drivers/misc/mediatek/emi_bwl/Kconfig"
-source "drivers/misc/mediatek/emi_mbw/Kconfig"
-source "drivers/misc/mediatek/emi_mpu/Kconfig"
-source "drivers/misc/mediatek/ext_gic/Kconfig"
-source "drivers/misc/mediatek/gpio/Kconfig"
+#source "drivers/misc/mediatek/accdet/Kconfig"
+#source "drivers/misc/mediatek/auxadc/Kconfig"
+#source "drivers/misc/mediatek/cirq/Kconfig"
+#source "drivers/misc/mediatek/debug_latch/Kconfig"
+#source "drivers/misc/mediatek/debug_tracer/Kconfig"
+#source "drivers/misc/mediatek/devapc/Kconfig"
+#source "drivers/misc/mediatek/dfd/Kconfig"
+#source "drivers/misc/mediatek/dramc/Kconfig"
+#source "drivers/misc/mediatek/dxcc/Kconfig"
+#source "drivers/misc/mediatek/emi_bwl/Kconfig"
+#source "drivers/misc/mediatek/emi_mbw/Kconfig"
+#source "drivers/misc/mediatek/emi_mpu/Kconfig"
+#source "drivers/misc/mediatek/ext_gic/Kconfig"
+#source "drivers/misc/mediatek/gpio/Kconfig"
 #source "drivers/misc/mediatek/gpt/Kconfig"
 #source "drivers/misc/mediatek/i2c/Kconfig"
-source "drivers/misc/mediatek/ir_learning/Kconfig"
-source "drivers/misc/mediatek/irrx/Kconfig"
-source "drivers/misc/mediatek/irtx/Kconfig"
-source "drivers/misc/mediatek/leds/Kconfig"
-source "drivers/misc/mediatek/m4u/Kconfig"
+#source "drivers/misc/mediatek/ir_learning/Kconfig"
+#source "drivers/misc/mediatek/irrx/Kconfig"
+#source "drivers/misc/mediatek/irtx/Kconfig"
+#source "drivers/misc/mediatek/leds/Kconfig"
+#source "drivers/misc/mediatek/m4u/Kconfig"
 #source "drivers/misc/mediatek/md32/Kconfig"
-source "drivers/misc/mediatek/mu3d/Kconfig"
-source "drivers/misc/mediatek/mu3phy/Kconfig"
-source "drivers/misc/mediatek/pseudo_m4u/Kconfig"
-source "drivers/misc/mediatek/pwm/Kconfig"
-source "drivers/misc/mediatek/rtc/Kconfig"
-source "drivers/misc/mediatek/scp/Kconfig"
-source "drivers/misc/mediatek/audio_ipi/Kconfig"
-source "drivers/misc/mediatek/sspm/Kconfig"
-source "drivers/misc/mediatek/smi/Kconfig"
-source "drivers/misc/mediatek/ssusb/Kconfig"
-source "drivers/misc/mediatek/systracker/Kconfig"
-source "drivers/misc/mediatek/uart/Kconfig"
-source "drivers/misc/mediatek/usb11/Kconfig"
-source "drivers/misc/mediatek/usb20/Kconfig"
-source "drivers/misc/mediatek/usb2jtag/Kconfig"
-source "drivers/misc/mediatek/usb_c/Kconfig"
-source "drivers/misc/mediatek/vibrator/Kconfig"
-source "drivers/misc/mediatek/xhci/Kconfig"
-source "drivers/misc/mediatek/pcie_ut/Kconfig"
+#source "drivers/misc/mediatek/mu3d/Kconfig"
+#source "drivers/misc/mediatek/mu3phy/Kconfig"
+#source "drivers/misc/mediatek/pseudo_m4u/Kconfig"
+#source "drivers/misc/mediatek/pwm/Kconfig"
+#source "drivers/misc/mediatek/rtc/Kconfig"
+#source "drivers/misc/mediatek/scp/Kconfig"
+#source "drivers/misc/mediatek/audio_ipi/Kconfig"
+#source "drivers/misc/mediatek/sspm/Kconfig"
+#source "drivers/misc/mediatek/smi/Kconfig"
+#source "drivers/misc/mediatek/ssusb/Kconfig"
+#source "drivers/misc/mediatek/systracker/Kconfig"
+#source "drivers/misc/mediatek/uart/Kconfig"
+#source "drivers/misc/mediatek/usb11/Kconfig"
+#source "drivers/misc/mediatek/usb20/Kconfig"
+#source "drivers/misc/mediatek/usb2jtag/Kconfig"
+#source "drivers/misc/mediatek/usb_c/Kconfig"
+#source "drivers/misc/mediatek/vibrator/Kconfig"
+#source "drivers/misc/mediatek/xhci/Kconfig"
+#source "drivers/misc/mediatek/pcie_ut/Kconfig"
 
 endmenu  # Peripheral
 
@@ -411,40 +411,40 @@ config MTK_TUI_RAM_SIZE
 	depends on MTK_SVP
 	default 0
 
-source "drivers/misc/mediatek/aee/Kconfig"
-source "drivers/misc/mediatek/atf_log/Kconfig"
-source "drivers/misc/mediatek/boot/Kconfig"
-source "drivers/misc/mediatek/boot_reason/Kconfig"
-source "drivers/misc/mediatek/blocktag/Kconfig"
-source "drivers/misc/mediatek/chip/Kconfig"
+#source "drivers/misc/mediatek/aee/Kconfig"
+#source "drivers/misc/mediatek/atf_log/Kconfig"
+#source "drivers/misc/mediatek/boot/Kconfig"
+#source "drivers/misc/mediatek/boot_reason/Kconfig"
+#source "drivers/misc/mediatek/blocktag/Kconfig"
+#source "drivers/misc/mediatek/chip/Kconfig"
  
 #source "drivers/misc/mediatek/devinfo/Kconfig"
 #source "drivers/misc/mediatek/dynamic_boost/Kconfig"
-source "drivers/misc/mediatek/exm/Kconfig"
+#source "drivers/misc/mediatek/exm/Kconfig"
  
-source "drivers/misc/mediatek/gud/Kconfig"
-source "drivers/misc/mediatek/ice_debug/Kconfig"
-source "drivers/misc/mediatek/log_store/Kconfig"
-source "drivers/misc/mediatek/masp/Kconfig"
+#source "drivers/misc/mediatek/gud/Kconfig"
+#source "drivers/misc/mediatek/ice_debug/Kconfig"
+#source "drivers/misc/mediatek/log_store/Kconfig"
+#source "drivers/misc/mediatek/masp/Kconfig"
  
-source "drivers/misc/mediatek/mlog/Kconfig"
-source "drivers/misc/mediatek/mtee/Kconfig"
-source "drivers/misc/mediatek/mtprintk/Kconfig"
-source "drivers/misc/mediatek/mtprof/Kconfig"
+#source "drivers/misc/mediatek/mlog/Kconfig"
+#source "drivers/misc/mediatek/mtee/Kconfig"
+#source "drivers/misc/mediatek/mtprintk/Kconfig"
+#source "drivers/misc/mediatek/mtprof/Kconfig"
 #source "drivers/misc/mediatek/performance/Kconfig"
-source "drivers/misc/mediatek/ram_console/Kconfig"
-source "drivers/misc/mediatek/sched/Kconfig"
-source "drivers/misc/mediatek/selinux_warning/Kconfig"
-source "drivers/misc/mediatek/sysenv/Kconfig"
+#source "drivers/misc/mediatek/ram_console/Kconfig"
+#source "drivers/misc/mediatek/sched/Kconfig"
+#source "drivers/misc/mediatek/selinux_warning/Kconfig"
+#source "drivers/misc/mediatek/sysenv/Kconfig"
 # 
-source "drivers/misc/mediatek/teei/Kconfig"
-source "drivers/misc/mediatek/vow/Kconfig"
-source "drivers/misc/mediatek/watchpoint/Kconfig"
-source "drivers/misc/mediatek/rt-regmap/Kconfig"
-source "drivers/misc/mediatek/smartpa/Kconfig"
-source "drivers/misc/mediatek/reg_monitor/Kconfig"
-source "drivers/misc/mediatek/iccs/Kconfig"
-source "drivers/misc/mediatek/fiq_cache/Kconfig"
+#source "drivers/misc/mediatek/teei/Kconfig"
+#source "drivers/misc/mediatek/vow/Kconfig"
+#source "drivers/misc/mediatek/watchpoint/Kconfig"
+#source "drivers/misc/mediatek/rt-regmap/Kconfig"
+#source "drivers/misc/mediatek/smartpa/Kconfig"
+#source "drivers/misc/mediatek/reg_monitor/Kconfig"
+#source "drivers/misc/mediatek/iccs/Kconfig"
+#source "drivers/misc/mediatek/fiq_cache/Kconfig"
 
 endmenu    # Misc
 
