mt6625l: defconfig: add depency option for combo

--- a/arch/arm/configs/mt7623n_evb_bpi_defconfig
+++ b/arch/arm/configs/mt7623n_evb_bpi_defconfig
@@ -1692,6 +1692,8 @@ CONFIG_ALTERA_STAPL=m
 #
 # Mediatek Peripherals 
 #
+CONFIG_MEDIATEK_SOLUTION=y
+
 CONFIG_MTK_PLATFORM="mt7623"
 CONFIG_USB_MTK_HDRC=y
 CONFIG_MTK_MUSB_QMU_SUPPORT=y
