mt6625l: add aee

--- a/drivers/misc/mediatek/Makefile
+++ b/drivers/misc/mediatek/Makefile
@@ -192,7 +192,7 @@ obj-$(CONFIG_MTK_BTIF) += btif/
 
 #obj-$(CONFIG_THERMAL)   += thermal/
 
-#obj-$(CONFIG_MEDIATEK_SOLUTION)	+= aee/
+obj-$(CONFIG_MEDIATEK_SOLUTION)	+= aee/
 #obj-$(CONFIG_MTK_ATF_LOGGER)	+= atf_log/
 #obj-$(CONFIG_MTK_MLOG) += mlog/
 #obj-$(CONFIG_MTK_EMI_BWL)	+= emi_bwl/
