mt6625l: add pltform-file for mt7623 as copy instead of mt7623 folder
except chip-id and compatible all is same as mt8167 source and seems not used yet

--- a/drivers/misc/mediatek/connectivity/common/common_main/Makefile
+++ b/drivers/misc/mediatek/connectivity/common/common_main/Makefile
@@ -54,7 +54,7 @@ endif
 ifeq ($(CONFIG_MTK_COMBO), y)
 obj-y += core/
 obj-y += linux/
-#obj-y += platform/
-obj-y += mt7623/
+obj-y += platform/
+#obj-y += mt7623/
 
 endif
