--- a/drivers/misc/mediatek/connectivity/wlan/Makefile
+++ b/drivers/misc/mediatek/connectivity/wlan/Makefile
@@ -25,7 +25,7 @@ obj-$(CONFIG_MTK_COMBO_WIFI) += wmt_chrdev_wifi.o
 #########################################################
 # WLAN driver
 
-	obj-y   +=  gen2/
+#	obj-y   +=  gen2/
 
 ifneq ($(filter "MT6630",$(CONFIG_MTK_COMBO_CHIP)),)
 	obj-y   +=  gen3/
@@ -36,7 +36,7 @@ ifneq ($(filter "CONSYS_6797",$(CONFIG_MTK_COMBO_CHIP)),)
 	subdir-ccflags-y += -D CFG_SPM_WORKAROUND_FOR_HOTSPOT=0
 	obj-y   +=  gen3/
 else ifneq ($(filter "CONSYS_%",$(CONFIG_MTK_COMBO_CHIP)),)
-	$(warning include gen2)
+#	$(info include gen2)
 	obj-y   +=  gen2/
 endif
 
