mt6625l: some more debug and recreate MTK_PLATFORM where needed

--- a/drivers/misc/mediatek/connectivity/Makefile
+++ b/drivers/misc/mediatek/connectivity/Makefile
@@ -14,6 +14,7 @@
 # Connectivity combo driver
 # If KERNELRELEASE is defined, we've been invoked from the
 # kernel build system and can use its language.
+$(info connectivity_plat:$(MTK_PLATFORM))
 ifneq ($(KERNELRELEASE),)
 subdir-ccflags-y += -D MTK_WCN_REMOVE_KERNEL_MODULE
 ifeq ($(CONFIG_ARM64), y)
