--- a/drivers/misc/mediatek/connectivity/common/Makefile
+++ b/drivers/misc/mediatek/connectivity/common/Makefile
@@ -1,3 +1,4 @@
+$(info common_plat:$(MTK_PLATFORM))
 subdir-ccflags-y += -Werror -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include
 subdir-ccflags-y += -Werror -I$(srctree)/drivers/misc/mediatek/include/mt-plat
 
