mt6625l: fix build

--- a/arch/arm/configs/mt7623n_evb_bpi_defconfig
+++ b/arch/arm/configs/mt7623n_evb_bpi_defconfig
@@ -1759,7 +1759,7 @@ CONFIG_MTK_COMBO=y
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6572 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6582 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_8127 is not set
-CONFIG_MTK_COMBO_CHIP_CONSYS_7623=y
+#CONFIG_MTK_COMBO_CHIP_CONSYS_7623=y
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6752 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6592 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_8163 is not set
