--- a/drivers/misc/mediatek/connectivity/common/common_main/platform/Makefile
+++ b/drivers/misc/mediatek/connectivity/common/common_main/platform/Makefile
@@ -18,6 +18,7 @@ ccflags-y += \
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/base/power/$(MTK_PLATFORM)
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include/mach
 
+$(info $(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include/mach)
 subdir-ccflags-y += -D MTK_WCN_WMT_STP_EXP_SYMBOL_ABSTRACT
 
 ifeq ($(CONFIG_MTK_CONN_LTE_IDC_SUPPORT),y)
